<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <RelativeLayout
        android:id="@+id/rlOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true" />

    <TableRow
        android:id="@+id/tbr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibt_back_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray_bg"
            android:src="@drawable/arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/txt_coin"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tbr_coin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txt_current_coins"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_current_coins"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:drawableEndCompat="@drawable/coin"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/txt_daily_coin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_daily_coins"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:drawableEndCompat="@drawable/coin"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </TableRow>

    <TextView
        android:id="@+id/tv_how_to_get_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_how_to_get_coin"
        android:textColor="@color/color_text_bg"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbr_coin2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_daily_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#607d8b"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_how_to_get_coin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="3"
            tools:ignore="UselessLeaf">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/daily_check"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|start"
                android:text="@string/txt_daily_check_in"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/ibt_check_in_coin"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/check_in"
                tools:ignore="ContentDescription" />
        </TableRow>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_invite_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#607d8b"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_daily_check">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="3"
            tools:ignore="UselessLeaf">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/invite_friend"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|start"
                android:text="@string/txt_invite_friend"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/ibt_invite_friend"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/ic_80coin"
                tools:ignore="ContentDescription" />

        </TableRow>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_watch_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#607d8b"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_invite_friend">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="3"
            tools:ignore="UselessLeaf">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/watch_video"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|start"
                android:text="@string/txt_watch_get_coin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/ibt_watch_coin"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/ic_150coin"
                tools:ignore="ContentDescription" />
        </TableRow>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tap_coin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#607d8b"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_watch_coin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:weightSum="3"
            tools:ignore="UselessLeaf">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/tap_get_coin"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center|start"
                android:text="@string/txt_tap_get_coin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/ibt_tap_coin"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/ic_150coin"
                tools:ignore="ContentDescription" />
        </TableRow>

    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        ads:adSize="BANNER"
        ads:adUnitId="@string/txt_banner_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>